# IFS05-TE

./: README.md  primer_borrador.js
Test bench/Charger_Control_Unit/: SETUP.txt  raspberry_access.bat  raspberry_access_IP.bat  raspberry_pass_files.bat  raspberry_pass_python.bat  raspberry_pass_python_IP.bat
Test bench/Charger_Control_Unit/files/: config.txt  requirements.txt
Test bench/Charger_Control_Unit/putty_keys/: private.ppk
Test bench/Display Alvaro/Proyecto Pantalla/: Marcador.cpp
Test bench/Display Alvaro/build-Display_Test_v1-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: build.ninja  cmake_install.cmake
Test bench/Tesla_UI/TeslaUI/: main.cpp  main.qml  qml.qrc
Workbench/Charger_Control_Unit/: raspberry_export_libraries.bat  raspberry_import_libraries.bat  raspberry_import_libraries_no_key.bat
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/: CMakeLists.txt  UntitledProject1.qmlproject.qtds
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/content/: App.qml
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/imports/: CMakeLists.txt
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/imports/UntitledProject1/: CMakeLists.txt  Constants.qml  qmldir
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/imports/UntitledProject1/designer/: plugin.metainfo
Workbench/Display Alvaro/Display_Test_v2/UntitledProject1/src/: import_qml_plugins.h
Workbench/Display Jaime/: ExplicaciónCarpetas.txt  Marcadores.java
Workbench/Display Raúl/: dash_start.sh
Workbench/Display Raúl C++/: Dashboard.java  README.md
(+798 files in other folders)
